[package]
name = "button"
version = "0.1.0"
authors = ["Sönke Liebau <soenke.liebau@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
rppal = "0.11"
tokio = { version = "1.0", features=["time", "macros", "rt-multi-thread"]}
